<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context=".DetailedRecipeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/dot_loading">

            <ImageButton
                android:id="@+id/ImageButtonSeeLess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginLeft="355dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/ic_expand_less"
                android:background="@drawable/black_rounded_corner"/>

            <ImageView
                android:id="@+id/imageViewExpandedRecipePicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="@string/category"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="14dp"
                            android:gravity="center|left"
                            android:drawableLeft="@drawable/ic_list"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/colorPrimaryDark"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/textViewExpandedRecipeCategory"
                            android:text="@string/dot_loading"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="14dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|left"
                            android:drawableLeft="@drawable/ic_time"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/colorPrimaryDark"
                            android:paddingLeft="14dp"
                            android:paddingTop="14dp"
                            android:paddingRight="14dp"
                            android:text="@string/time"
                            android:textColor="@color/colorPrimaryDark" />
                        <TextView
                            android:id="@+id/textViewExpandedRecipeTime"
                            android:text="@string/dot_loading"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="14dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">
                <androidx.cardview.widget.CardView
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="@string/creator"
                            android:gravity="center|left"
                            android:drawableLeft="@drawable/ic_person"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/colorPrimaryDark"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="14dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/textViewExpandedRecipeCreator"
                            android:text="@string/dot_loading"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="14dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/Country"
                            android:text="@string/video"
                            android:gravity="center|left"
                            android:drawableLeft="@drawable/ic_video"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/colorPrimaryDark"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="14dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/textViewExpandedRecipeVideo"
                            android:text="@string/dot_loading"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="14dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:drawableLeft="@drawable/ic_shopping_cart"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:text="@string/ingredients"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />
            <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:id="@+id/textViewExpandedRecipeIngredients"
                    android:text="@string/dot_loading"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:drawableLeft="@drawable/ic_format_list_numbered"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:text="@string/instructions"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />
            <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:id="@+id/textViewExpandedRecipeInstruction"
                    android:text="@string/dot_loading"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="#D0FFDB"
                app:cardElevation="0dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:id="@+id/textViewExpandedRecipeAddToFavorites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="14dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Add to favorites"
                    android:textStyle="bold"
                    android:textColor="#2A7E2F"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/ic_star_not_fill"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
